--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <img src="/images/luxury/Asset 1@3x.png" alt="luxury logo" width="200rem" height="100rem">
+        <img src="/images/luxury/Asset 1@3x.png" alt="luxury logo" class="logo">
     </header>
     <nav>
         <ul>
@@ -42,7 +42,7 @@
             <article>
                 <div>
                     <h2>Qualification</h2>
-                    <img src="/images/jew 3.jpg" alt="luxury logo" width="100rem" height="50rem">
+                    <img src="/images/jew 3.jpg" alt="luxury logo" class="article-image">
                     <p>
                         Mariana is the owner and the lead designer of Mangata and Gallo. After graduating from design
                         school
@@ -55,7 +55,7 @@
             <article class="article-2">
                 <div>
                     <h2>Hometown</h2>
-                    <img src="/images/jew 4.jpg" alt="luxury logo" width="100rem" height="50rem">
+                    <img src="/images/jew 4.jpg" alt="luxury logo" class="article-image">
                     <p>Mariana has always managed every aspect of the business, from jewelry design to marketing to
                         e-commerce. </p>
                 </div>
@@ -63,7 +63,7 @@
             <article class="article-3">
                 <div>
                     <h2>Hired</h2>
-                    <img src="/images/jew 5.jpg" alt="luxury logo" width="100rem" height="50rem">
+                    <img src="/images/jew 5.jpg" alt="luxury logo" class="article-image">
                     <p>However, she recently hired several artisans to help craft her designs and a young employee to
                         help
                         manage the company website and social media accounts.</p>
@@ -72,12 +72,10 @@
         </section>
     </main>
     <footer>
-        <div class="footer-logo">
-            <img src="images/luxury/Asset 2@3x.png" alt="luxury logo" width="350rem" height="50rem">
-            <div>
-                <div>
-                    <p>&copy; copyright Luxury Jewelry</p>
-                </div>
+        <div class="footer-content">
+            <img src="images/luxury/Asset 2@3x.png" alt="luxury logo" class="footer-logo">
+            <p>&copy; copyright Luxury Jewelry</p>
+        </div>
     </footer>
 </body>
 
